--- a/index.html
+++ b/index.html
@@ -221,5 +221,5 @@
     AOS.init();
 </script>
 <script src="https://kit.fontawesome.com/a0fc5b5454.js" crossorigin="anonymous"></script>
-
+<!-- git trial finally -->
 </html>
